src/test/ui/issues/issue-48131.mir.stderr
error: unnecessary `unsafe` block
  --> $DIR/issue-48131.rs:12:9
   |
LL |         unsafe { /* unnecessary */ }
   |         ^^^^^^ unnecessary `unsafe` block
   |
note: the lint level is defined here
  --> $DIR/issue-48131.rs:6:9
   |
LL | #![deny(unused_unsafe)]
   |         ^^^^^^^^^^^^^

error: unnecessary `unsafe` block
  --> $DIR/issue-48131.rs:23:13
   |
LL |             unsafe { /* unnecessary */ }
   |             ^^^^^^ unnecessary `unsafe` block

error: aborting due to 2 previous errors

